framec_tests/language_specific/python/v3_facade_smoke/negative/strict_malformed_fstring.frm
@target python

system S {
    machine:
        $A {
            e() {
                -> $B(1)
                msg = f"value: {x"  # malformed f-string (missing closing brace)
            }
        }
        $B {
        }
}

